Added fixes for Outlook, Gmail and Yahoo

--- a/email-signature-new.html
+++ b/email-signature-new.html
@@ -31,7 +31,7 @@
 	h5,
 	h6,
 	.t_cht {
-		color:#000!important;
+		color: #000!important;
 	}
 	.ExternalClass p,
 	.ExternalClass span,
@@ -39,301 +39,327 @@
 	.ExternalClass td {
 		line-height: 100%;
 	}
+	td,
+	b,
+	span {
+		font-family: 'courier new', monospace;
+		font-family: 'courier new', monospace!important;
+	}
+	.ii a[href] {
+		color: #989aa8!important;
+	}
 </style>
 </head>
 <body>
-<pre class="email-standard-sig-identifier" style="color:#fff;">
+<pre class="email-standard-sig-identifier" style="color: #fff;">
 -- 
 </pre>
 <table
+	class="sig-responsivewrapper"
 	align="left"
-    bgcolor="#282a36"
-    border="0px"
-    bordercolor="#0000"
-    cellpadding="1px"
+    cellpadding="0"
     cellspacing="0"
-    color="#fff"
-    width="520px"
-    style="
-		border-top-left-radius: 5px;
-		border-top-right-radius: 5px;
-		border-bottom-left-radius: 5px;
-		border-bottom-right-radius: 5px;
-        background-color: #282a36;
-        padding:0;
-		width: 520px;
+    width="100%"
+	style="
 		max-width: 100%;
-        border-collapse: collapse;
-        color: #fff;
-        font-family: 'courier new', monospace;
-        font-size: 14px;
-		font-weight: bold;
-        -webkit-border-horizontal-spacing: 0px;
-        -webkit-border-vertical-spacing: 0px;
+		max-width: 100% !important;
 	"
 >
-	<tr class="sig-windowbar">
-		<td>
-			<table
-				align="left"
-				border="0px"
-				cellpadding="1px"
-				cellspacing="0"
-				style="
-					margin-left: 0px;
-					margin-left: 0px!important;
-					border-top-left-radius: 5px;
-					border-top-right-radius: 5px;
-        			background-color: #3c3e4d;
-					width: 100%;
-					font-family: 'courier new', monospace;
-					font-size: 5px;
-				"
-			>
-				<tr>
-					<td>
-						<b 
-							color="#989aa8"
-							style="
-								margin-left: 10px;
-								margin-left: 10px!important;
-								vertical-align: middle;
-								color: #989aa8;
-								font-size: 5px;
-								margin:0;
-								line-height: 1;
-								mso-line-height-rule:exactly; 
-							"
-						>
-							<span style="font-size: 28px;">&bull;</span>
-							<span style="font-size: 28px;">&bull;</span>
-							<span style="font-size: 28px;">&bull;</span>
-						</b>	
-					</td>
-				</tr>
-			</table>
-		</td>
-	</tr>
-    <tr class="spacer" style="font-size:1px;"><td><span>&nbsp;</span></td></tr>
-    <tr class="sig-personstart">
-		<td>
-			<table
-				align="left"
-				border="0px"
-				cellpadding="1px"
-				cellspacing="0"
-				style="
-					margin-left: 14px;
-					margin-left: 14px!important;
-        			font-family: 'courier new', monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td>
-						<b style="color:#50fa7b">
-							Jefferson_Real
-						</b>
-						<b style="color:#6272a4">
-							= [
-						</b>
-					</td>
-				</tr>
-			</table>
-		</td>
-    </tr>
-    <tr class="sig-jobtitle">
-		<td>
-			<table
-				align="left"
-				border="0px"
-				cellpadding="1px"
-				cellspacing="0"
-				style="
-					margin-left: 14px;
-					margin-left: 14px!important;
-        			font-family: 'courier new', monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td>
-						<b style="color:#6272a4">'</b><b style="color:#ffb86c">Freelance Web Developer</b><b style="color:#6272a4">'&comma;</b>
-					</td>
-				</tr>
-			</table>
-		</td>
-    </tr>
-	<tr class="sig-website">
-		<td>
-			<table
-				align="left"
-				border="0px"
-				cellpadding="1px"
-				cellspacing="0"
-				style="
-					margin-left: 14px;
-					margin-left: 14px!important;
-        			font-family: 'courier new', monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td>
-						<b style="color:#6272a4">&apos;</b><b><a
-							title="Visit My Website"
-							href="https://jeffersonreal.uk/"
-							style="
-								color: #8be9fd;
-								font-family: 'courier new', monospace;
-							"
-						>jeffersonreal.uk</a></b><b style="color:#6272a4">&apos;&comma;</b>
-					</td>
-				</tr>
-			</table>
-		</td>
-    </tr>
-	<tr class="sig-email">
-		<td>
-			<table
-				align="left"
-				border="0px"
-				cellpadding="1px"
-				cellspacing="0"
-				style="
-					margin-left: 14px;
-					margin-left: 14px!important;
-        			font-family: 'courier new', monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td>
-						<b style="color:#6272a4">&apos;</b><b><a
-							title="Visit My Website"
-							href="mailto:me@jeffersonreal.uk?subject=Email%20signature%20click"
-							style="
-								color: #f1fa8c;
-								font-family: 'courier new', monospace;
-							"
-						>me@jeffersonreal.uk</a></b><b style="color:#6272a4">&apos;&comma;</b>
-					</td>
-				</tr>
-			</table>
-		</td>
-    </tr>
-	<tr class="sig-phone">
-		<td>
-			<table
-				align="left"
-				border="0px"
-				cellpadding="1px"
-				cellspacing="0"
-				style="
-					margin-left: 14px;
-					margin-left: 14px!important;
-        			font-family: 'courier new', monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td>
-						<b style="color:#6272a4">&apos;</b><b><a
-							title="Visit My Website"
-							href="tel:07584279323"
-							style="
-								color: #ff5555;
-								font-family: 'courier new', monospace;
-							"
-						>07584 279323</a></b><b style="color:#6272a4">&apos;&comma;</b>
-					</td>
-				</tr>
-			</table>
-		</td>
-    </tr>
-	<tr class="sig-social">
-		<td>
-			<table
-				align="left"
-				border="0px"
-				cellpadding="1px"
-				cellspacing="0"
-				style="
-					margin-left: 14px;
-					margin-left: 14px!important;
-					font-family: 'courier new', monospace;
-					font-size: 14px;
-				"
-			>
-				<tr>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td>
-						<b style="color:#6272a4">[</b>
-						<b style="color:#6272a4">&apos;</b><b><a
-							title="Visit My Twitter Profile"
-							href="https://twitter.com/BigupJeff"
-							style="
-								color: #ff79c6;
-								font-family: 'courier new', monospace;
-							"
-						>Twitter</a></b><b style="color:#6272a4">&apos;&comma;</b>
-						<b style="color:#6272a4">&apos;</b><b><a
-							title="Visit My Codepen Profile"
-							href="https://codepen.io/bigupjeff"
-							style="
-								color: #ff79c6;
-								font-family: 'courier new', monospace;
-							"
-						>Codepen</a></b><b style="color:#6272a4">&apos;&comma;</b>
-						<b style="color:#6272a4">&apos;</b><b><a
-							title="Visit My Instagram Profile"
-							href="https://www.instagram.com/bigupweb/"
-							style="
-								color: #ff79c6;
-								font-family: 'courier new', monospace;
-							"
-						>Instagram</a></b><b style="color:#6272a4">&apos;&comma;</b>
-						<b style="color:#6272a4">&apos;</b><b><a
-						title="Visit My Facebook Profile"
-						href="https://www.facebook.com/bigupweb"
+	<td width="520px"
+		style="
+			max-width: 100%;
+			max-width: 100% !important;
+		"
+	>
+		<table
+			class="sig-window"
+			align="left"
+			bgcolor="#282a36"
+			border="0px"
+			bordercolor="#0000"
+			cellpadding="1px"
+			cellspacing="0"
+			width="100%"
+			style="
+				border-top-left-radius: 5px;
+				border-top-right-radius: 5px;
+				border-bottom-left-radius: 5px;
+				border-bottom-right-radius: 5px;
+				background-color: #282a36;
+				padding:0;
+				width: 100%;
+				max-width: 100%;
+				border-collapse: collapse;
+				color: #fff;
+				font-family: 'courier new', monospace;
+				font-size: 14px;
+				font-weight: bold;
+				-webkit-border-horizontal-spacing: 0px;
+				-webkit-border-vertical-spacing: 0px;
+			"
+		>
+			<tr class="sig-windowbar">
+				<td
+					width="100%"
+					style="
+						margin-left: 0px;
+						margin-left: 0px!important;
+						border-top-left-radius: 5px;
+						border-top-right-radius: 5px;
+						background-color: #3c3e4d;
+						width: 100%;
+						font-family: 'courier new', monospace;
+						font-size: 5px;
+					"
+				>
+					<b 
 						style="
-							color: #ff79c6;
-							font-family: 'courier new', monospace;
+							margin-left: 10px;
+							margin-left: 10px!important;
+							vertical-align: middle;
+							color: #989aa8;
+							font-size: 5px;
+							margin:0;
+							line-height: 1;
+							mso-line-height-rule: exactly; 
 						"
-						>Facebook</a></b><b style="color:#6272a4">&apos;</b>
-						<b style="color:#6272a4">]</b>
-					</td>
-				</tr>
-			</table>
-		</td>
-	</tr>
-	<tr class="sig-personend">
-		<td>
-			<table
-				align="left"
-				border="0px"
-				cellpadding="1px"
-				cellspacing="0"
-				style="
-					margin-left: 14px;
-					margin-left: 14px!important;
-        			font-family: 'courier new', monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td>
-						<b style="color:#6272a4">]</b>
-					</td>
-				</tr>
-			</table>
-		</td>
-    </tr>
-    <tr class="spacer" style="font-size:1px;"><td><span>&nbsp;</span></td></tr>
+					>
+						<span style="font-size: 28px;">&bull;</span>
+						<span style="font-size: 28px;">&bull;</span>
+						<span style="font-size: 28px;">&bull;</span>
+					</b>
+				</td>
+			</tr>
+			<tr class="spacer" style="font-size:1px;"><td><span>&nbsp;</span></td></tr>
+			<tr class="sig-personstart">
+				<td>
+					<table
+						align="left"
+						border="0px"
+						cellpadding="1px"
+						cellspacing="0"
+						style="
+							margin-left: 14px;
+							margin-left: 14px!important;
+							font-family: 'courier new', monospace;
+							font-size: 14px;
+						"
+					>
+						<tr>
+							<td>
+								<b style="color: #50fa7b; font-family: 'courier new', monospace;">
+									<span style="color: #50fa7b; font-family: 'courier new', monospace;">Jefferson_Real</span>
+								</b>
+								<b style="color: #6272a4; font-family: 'courier new', monospace;">
+									<span style="color: #6272a4; font-family: 'courier new', monospace;">&#61;&nbsp;&#x5B;</span>
+								</b>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr class="sig-jobtitle">
+				<td>
+					<table
+						align="left"
+						border="0px"
+						cellpadding="1px"
+						cellspacing="0"
+						style="
+							margin-left: 14px;
+							margin-left: 14px!important;
+							font-family: 'courier new', monospace;
+							font-size: 14px;
+						"
+					>
+						<tr>
+							<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+							<td>
+								<b style="color: #6272a4">&apos;</b><b style="color: #ffb86c; font-family: 'courier new', monospace;"><span style="color: #ffb86c; font-family: 'courier new', monospace;">Freelance&nbsp;Web&nbsp;Developer</span></b><b style="color: #6272a4">&apos;&comma;</b>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr class="sig-website">
+				<td>
+					<table
+						align="left"
+						border="0px"
+						cellpadding="1px"
+						cellspacing="0"
+						style="
+							margin-left: 14px;
+							margin-left: 14px!important;
+							font-family: 'courier new', monospace;
+							font-size: 14px;
+						"
+					>
+						<tr>
+							<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+							<td>
+								<b style="color: #6272a4">&apos;</b><b><a
+									title="Visit my Website"
+									href="https://jeffersonreal.uk/"
+									target="_blank"
+									style="
+										color: #8be9fd;
+										font-family: 'courier new', monospace;
+									"
+								>jeffersonreal.uk</a></b><b style="color: #6272a4">&apos;&comma;</b>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr class="sig-email">
+				<td>
+					<table
+						align="left"
+						border="0px"
+						cellpadding="1px"
+						cellspacing="0"
+						style="
+							margin-left: 14px;
+							margin-left: 14px!important;
+							font-family: 'courier new', monospace;
+							font-size: 14px;
+						"
+					>
+						<tr>
+							<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+							<td>
+								<b style="color: #6272a4">&apos;</b><b><a
+									title="Email Me"
+									href="mailto:me@jeffersonreal.uk?subject=Email%20signature%20click"
+									target="_blank"
+									style="
+										color: #f1fa8c;
+										font-family: 'courier new', monospace;
+									"
+								>me@jeffersonreal.uk</a></b><b style="color: #6272a4">&apos;&comma;</b>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr class="sig-phone">
+				<td>
+					<table
+						align="left"
+						border="0px"
+						cellpadding="1px"
+						cellspacing="0"
+						style="
+							margin-left: 14px;
+							margin-left: 14px!important;
+							font-family: 'courier new', monospace;
+							font-size: 14px;
+						"
+					>
+						<tr>
+							<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+							<td>
+								<b style="color: #6272a4">&apos;</b><b><a
+									title="Call Me"
+									href="tel:07584279323"
+									target="_blank"
+									style="
+										color: #ff5555;
+										font-family: 'courier new', monospace;
+									"
+								>07584 279323</a></b><b style="color: #6272a4">&apos;&comma;</b>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr class="sig-social">
+				<td>
+					<table
+						align="left"
+						border="0px"
+						cellpadding="1px"
+						cellspacing="0"
+						style="
+							margin-left: 14px;
+							margin-left: 14px!important;
+							font-family: 'courier new', monospace;
+							font-size: 14px;
+						"
+					>
+						<tr>
+							<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+							<td>
+								<b style="color: #6272a4; font-family: 'courier new', monospace;">&#x5B;</b>
+								<b style="color: #6272a4">&apos;</b><b><a
+									title="Visit my Twitter Profile"
+									href="https://twitter.com/BigupJeff"
+									target="_blank"
+									style="
+										color: #ff79c6;
+										font-family: 'courier new', monospace;
+									"
+								>Twitter</a></b><b style="color: #6272a4">&apos;&comma;</b>
+								<b style="color: #6272a4">&apos;</b><b><a
+									title="Visit my Codepen Profile"
+									href="https://codepen.io/bigupjeff"
+									target="_blank"
+									style="
+										color: #ff79c6;
+										font-family: 'courier new', monospace;
+									"
+								>Codepen</a></b><b style="color: #6272a4">&apos;&comma;</b>
+								<b style="color: #6272a4">&apos;</b><b><a
+									title="Visit my Instagram Profile"
+									href="https://www.instagram.com/bigupweb/"
+									target="_blank"
+									style="
+										color: #ff79c6;
+										font-family: 'courier new', monospace;
+									"
+								>Instagram</a></b><b style="color: #6272a4">&apos;&comma;</b>
+								<b style="color: #6272a4">&apos;</b><b><a
+								title="Visit my Facebook Profile"
+								href="https://www.facebook.com/bigupweb"
+								target="_blank"
+								style="
+									color: #ff79c6;
+									font-family: 'courier new', monospace;
+								"
+								>Facebook</a></b><b style="color: #6272a4">&apos;</b>
+								<b style="color: #6272a4; font-family: 'courier new', monospace;">&#x5D;</b>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr class="sig-personend">
+				<td>
+					<table
+						align="left"
+						border="0px"
+						cellpadding="1px"
+						cellspacing="0"
+						style="
+							margin-left: 14px;
+							margin-left: 14px!important;
+							font-family: 'courier new', monospace;
+							font-size: 14px;
+						"
+					>
+						<tr>
+							<td>
+								<b style="color: #6272a4; font-family: 'courier new', monospace;">&#x5D;</b>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr class="spacer" style="font-size:1px;"><td><span>&nbsp;</span></td></tr>
+		</table>
+	</td>
+	<td class="sig-responsivehiddencell"></td>
 </table>
 </body>
 </html>
