--- a/email-signature.html
+++ b/email-signature.html
@@ -12,8 +12,8 @@
 				mso-font-alt: "Arial";
 			src:
 				local("Montserrat"),
-				url("https://my.bigupweb.uk/assets/fonts/montserrat/montserrat-variablefont_wght.ttf")
-					format("truetype");
+				url("https://my.bigupweb.com/assets/fonts/montserrat/montserrat-variablefont_wght.ttf"),
+				format("truetype");
 		}
 
 		.ExternalClass,
@@ -44,7 +44,7 @@
 		.jrsig h6 {
 			color: #fff;
 		}
-
+		
 		.jrsig h1,
 		.jrsig h2 {
 			font-weight: 900!important;
@@ -92,7 +92,7 @@
 			.jrwrapper {
 				width: 100%!important;
 			}
-
+			
 			.jrheader table,
 			.jrbody table,
 			.jrheader,
@@ -108,7 +108,7 @@
 			table.jrsocial td {
 				display: inline-block!important;
 			}
-
+			
 			.jrsig p,
 			.jrsig ul li,
 			.jrsig ol li {
@@ -139,16 +139,16 @@
 <body class="jrsig" style="width:100%; font-family:Montserrat,montserrat,'Source Sans','Helvetica Neue',Helvetica,'Arial Black',Arial,'sans-serif'; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; padding:0; Margin:0">
 	<table class="jrwrapper" width="500px" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse; border-spacing:0px; padding:0; Margin:0; Margin-bottom:20px; width:500px; background-color:#fff0">
 		<tr>
-			<td valign="top" align="middle" style="padding:0; Margin:0">
+			<td valign="top" align="left" style="padding:0; Margin:0">
 				<table class="jrheader" height="50px" width="100%" cellspacing="0" cellpadding="0" align="left" bgcolor="#000" style="background-image:url('https://cdn.webguyjeff.com/email/img/sig-header-background.png'); background-repeat:repeat-x; background-size: contain; background-color:#000; mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse; border-spacing:0px; table-layout:fixed !important; width:100%">
 					<tr>
 						<td style="padding-left:20px; padding-right:20px; padding-top:8px">
-							<table width="100%" cellspacing="0" cellpadding="0" align="middle" style="mso-element-frame-width:480px; mso-element-wrap:no-wrap-beside; mso-element-left:center; mso-table-lspace:0pt; mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse; border-spacing:0px; width:100%; padding:0; Margin:0;">
+							<table width="100%" cellspacing="0" cellpadding="0" align="left" style="mso-element-frame-width:480px; mso-element-wrap:no-wrap-beside; mso-element-left:left; mso-table-lspace:0pt; mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse; border-spacing:0px; width:100%; padding:0; Margin:0;">
 								<tr>
 									<td class="jrsig-name" valign="bottom" align="left">
 										<h2 style="Margin:0;  mso-line-height-rule:exactly; font-family:Montserrat,montserrat,'Source Sans','Helvetica Neue',Helvetica,'Arial Black',Arial,'sans-serif'; font-size:24px; font-style:normal; font-weight:900; color:#ffffff; Margin-bottom:0px">Jefferson Real</h2>
 									</td>
-									<td class="jrsig-avatar" role="presentation" width="78" align="middle" valign="bottom" style="Margin:0; font-size:0px; padding:0">
+									<td class="jrsig-avatar" role="presentation" width="78" align="left" valign="bottom" style="Margin:0; font-size:0px; padding:0">
 										<img height="78" width="78" src="https://cdn.webguyjeff.com/email/img/sig-avatar-x92.png" alt="A picture of my face" style="display:block; border:0; outline:none; text-decoration:none; -ms-interpolation-mode:bicubic; Margin:0!important">
 									</td>
 								</tr>
