domain update fix

--- a/email-signature.html
+++ b/email-signature.html
@@ -12,7 +12,7 @@
 				mso-font-alt: "Arial";
 			src:
 				local("Montserrat"),
-				url("https://my.bigupweb.com/assets/fonts/montserrat/montserrat-variablefont_wght.ttf"),
+				url("https://bigupweb.com/assets/fonts/montserrat/montserrat-variablefont_wght.ttf"),
 				format("truetype");
 		}
 
