--- a/email-signature.html
+++ b/email-signature.html
@@ -12,7 +12,7 @@
 				mso-font-alt: "Arial";
 			src:
 				local("Montserrat"),
-				url("https://bigupweb.com/assets/fonts/montserrat/montserrat-variablefont_wght.ttf"),
+				url("https://cdn.webguyjeff.com/email/fonts/montserrat/montserrat-variablefont_wght.ttf"),
 				format("truetype");
 		}
 
@@ -200,7 +200,8 @@
 										<table width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse; border-spacing:0px">
 											<tr>
 												<td align="left" style="Margin:0; padding:0; padding-top:12px">
-													<a target="_blank" href="https://jeffersonreal.uk" style="Margin:0; -webkit-text-size-adjust:none; -ms-text-size-adjust:none; mso-line-height-rule:exactly; font-family:Montserrat,montserrat,'Source Sans','Helvetica Neue',Helvetica,'Arial Black',Arial,'sans-serif'; color:#ffffff; font-size:14px; font-weight:700">Visit my website</a>
+													<span style="Margin:0; -webkit-text-size-adjust:none; -ms-text-size-adjust:none; mso-line-height-rule:exactly; font-family:Montserrat,montserrat,'Source Sans','Helvetica Neue',Helvetica,'Arial Black',Arial,'sans-serif'; color:#ffffff; font-size:14px; font-weight:700">🌐</span>
+													<a target="_blank" href="https://webguyjeff.com" style="Margin:0; -webkit-text-size-adjust:none; -ms-text-size-adjust:none; mso-line-height-rule:exactly; font-family:Montserrat,montserrat,'Source Sans','Helvetica Neue',Helvetica,'Arial Black',Arial,'sans-serif'; color:#ffffff; font-size:14px; font-weight:700">webguyjeff.com</a>
 												</td>
 											</tr>
 										</table>
